foi adcionado o rodape

--- a/produtos.html
+++ b/produtos.html
@@ -44,5 +44,9 @@
         
     </main>
 </body>
+<footer class="rodape">
+        <img src="IMG/logo-branco.png">
+        <p> &copy; Copyright Oroboros - 2020</p>
+</footer>
 
 </html>
