responsividade na pagina inicial

--- a/produtos.html
+++ b/produtos.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="css_barbearia.css">
 </head>
 <body class="body_pro.">
-    <header class="header_pro">
-        <h1><img class="logo" src="IMG/logo.png"></h1>
-        <nav class="posi">
-            <ul class="menu_pro">
-                <li class="list"><a href="barbearia.html">Home</a></li>
-                <li class="list"><a href="">Produtos</a></li>
-                <li class="list"><a href="">Contato</a></li>
+    <header class="header_cab">
+        <h1><a><img class="logo_cab"src="IMG/logo-branco.png"></a></h1>
+        <nav class="nav_cab">
+            <ul class="menu_cab">
+                <li class="lis"><a href="barbearia.html">Home</a></li>
+                <li class="lis"><a href="produtos.html">Produtos</a></li>
+                <li class="lis"><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
