--- a/contato.html
+++ b/contato.html
@@ -7,15 +7,15 @@
          <link rel="stylesheet" href="css_contato.css">
     </head>
     <body>
-        <header class="cabecalho">
-                <h1><img  class="logo"src="IMG/logo.png"></h1>
-                <nav>
-                    <ul class="lista">
-                        <li>Home</li>
-                        <li>Produtos</li>
-                        <li>Contato</li>
-                    </ul>
-                </nav>   
+        <header class="header_cab">
+            <h1><a><img class="logo_cab"src="IMG/logo-branco.png"></a></h1>
+            <nav class="nav_cab">
+                <ul class="menu_cab">
+                    <li class="lis"><a href="barbearia.html">Home</a></li>
+                    <li class="lis"><a href="produtos.html">Produtos</a></li>
+                    <li class="lis"><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
                 <form>
