adcionado responsividade em todas as abas

--- a/contato.html
+++ b/contato.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
          <meta  charset="UTF-8">
+         <meta name="viewport" content="width=device-width">
          <title>Contato</title>
          <link rel="stylesheet" href="reset.css">
          <link rel="stylesheet" href="css_contato.css">
@@ -53,24 +54,26 @@
 
                     <input type="submit"  value="enviar formulario"  class="botao">
                 </form>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>dia </th>
-                            <th>horario </th>
-                        </tr> 
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>segunda</td>
-                            <td>08H -20H</td>
-                        </tr>
-                        <tr>
-                            <td>terça</td>
-                            <td>08H - 20H</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="tabela-div">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>dia </th>
+                                <th>horario </th>
+                            </tr> 
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>segunda</td>
+                                <td>08H -20H</td>
+                            </tr>
+                            <tr>
+                                <td>terça</td>
+                                <td>08H - 20H</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
                 
         </main>
     </body>
