--- a/produtos.html
+++ b/produtos.html
@@ -2,20 +2,24 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Produtos</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="css_barbearia.css">
 </head>
 <body class="body_pro.">
     <header class="header_cab">
-        <h1><a><img class="logo_cab"src="IMG/logo-branco.png"></a></h1>
-        <nav class="nav_cab">
-            <ul class="menu_cab">
-                <li class="lis"><a href="barbearia.html">Home</a></li>
-                <li class="lis"><a href="produtos.html">Produtos</a></li>
-                <li class="lis"><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
+        <div class=" head-div">
+            <h1><a><img class="logo_cab"src="IMG/logo-branco.png"></a></h1>
+            <nav class="nav_cab">
+                <ul class="menu_cab">
+                    <li class="lis"><a href="barbearia.html">Home</a></li>
+                    <li class="lis"><a href="produtos.html">Produtos</a></li>
+                    <li class="lis"><a href="contato.html">Contato</a></li>
+                    
+                </ul>
+            </nav>
+        </div>
     </header>
  
     <main>
